# Vilya

./: .gitignore  README.md
.github/workflows/: release.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: ipc.rs  main.rs
apps/desktop/src-tauri/src/ai/: mod.rs
apps/desktop/src-tauri/src/db/: migrations.sql  mod.rs
apps/desktop/src-tauri/src/ingest/: cap_generic.rs  emsc_ws.rs  eonet.rs  gdacs.rs  mod.rs  nws_alerts.rs  usgs.rs
apps/desktop/src-tauri/src/merge/: mod.rs
apps/desktop/src-tauri/src/normalize/: mod.rs
apps/desktop/src-tauri/src/rules/: mod.rs
apps/desktop/src-tauri/src/telemetry/: mod.rs
apps/desktop/src-tauri/src/tests/: basic_tests.rs
apps/desktop/ui/: index.html  package.json  vite.config.ts
apps/desktop/ui/src/: App.svelte  main.ts
apps/desktop/ui/src/lib/: map.ts  store.ts
apps/desktop/ui/src/lib/components/: Analytics.svelte  EventDrawer.svelte  Sidebar.svelte
