[package]
name = "crisis-intel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tauri = { version = "2.0.0", features = ["rustls-tls"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
tokio-tungstenite = "0.23"
futures = "0.3"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
once_cell = "1"
geo = "0.28"
geohash = "0.13"
geojson = "0.24"
quick-xml = "0.36"
itertools = "0.13"

[build-dependencies]
tauri-build = "2"
